nearbyPrinters and requestPrint components were made.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-document-picker": "^2.1.0",
+    "react-native-maps": "^0.21.0",
+    "react-native-simple-toast": "0.0.8",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2"
   },
   "devDependencies": {
