--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,9 +137,14 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-document-picker')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-maps')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-maps')
+    compile project(':react-native-document-picker')
 }
 
 // Run this once to be able to run the application with BUCK
