--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-document-picker": "^2.1.0",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "^0.21.0",
     "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^5.0.0",
