--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-document-picker": "^2.1.0",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "^0.21.0",
