--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "immutability-helper": "^2.7.1",
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
