--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-document-picker": "^2.1.0",
     "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-maps": "^0.21.0",
+    "react-native-maps-directions": "^1.6.0",
     "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2"
