--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   "dependencies": {
     "immutability-helper": "^2.7.1",
     "native-base": "^2.7.2",
+    "pdfjs-dist": "^2.0.489",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-document-picker": "^2.1.0",
     "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-maps": "^0.21.0",
     "react-native-maps-directions": "^1.6.0",
     "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.11.2"
+    "react-navigation": "^2.11.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
