--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,14 +137,15 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-document-picker')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-maps')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-document-picker')
+    implementation project(':react-native-vector-icons')
     implementation project(':react-native-maps')
-    compile project(':react-native-document-picker')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    // implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:26.0.2"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-maps')
+    implementation project(':react-native-document-picker')
 }
 
 // Run this once to be able to run the application with BUCK
