--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,8 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -18,21 +15,18 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         mavenLocal()
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
 }
 
 ext {
-    buildToolsVersion = "26.0.3"
+    buildToolsVersion = "26.1.0"
     minSdkVersion = 16
     compileSdkVersion = 26
     targetSdkVersion = 26
